# abalone

./: pyproject.toml
AWS_original/: Inference Pipeline with Scikit-learn and Linear Learner.ipynb  abalone_tiny.csv  local test.ipynb
AWS_original/.ipynb_checkpoints/: Inference Pipeline with Scikit-learn and Linear Learner-checkpoint.ipynb
serverless/: package-lock.json  package.json  requirements.txt  serverless.yml
serverless/src/: handler.py  sklearn_abalone_featurizer.py
serverless/tests/: test_abalone.py
