[tool.poetry]
name = "abalone"
version = "0.1.0"
description = "Serverless predictions on the age of abalone"
authors = ["DanielMartinAlarcon <daniel.ma@verypossible.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DanielMartinAlarcon/abalone"
homepage = "https://github.com/DanielMartinAlarcon/abalone"


[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.10"
sagemaker = "^1.44"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
notebook = "^6.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pytest = "^5.3"
pytest-mock = "^1.12"
pytest-watch = "^4.2"
setuptools = "^42.0"
pandas = "^0.25.3"
matplotlib = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
